--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -5,9 +5,9 @@
   <title>Its Sew Regina - About Us</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/static/css/aboutus.css?v=2026-02-05" rel="stylesheet">
+  <link href="/static/css/aboutus.css?v=2026-02-12" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"></script>
-  <script src="static/js/aboutus.js?v=2026-02-05" defer></script>
+  <script src="static/js/aboutus.js?v=2026-02-12" defer></script>
   <style>
   </style>
 </head>
@@ -17,7 +17,7 @@
     
     <div class="bvn-logobar">
       <a href="/" class="logo">
-        <img src="/static/images/itssewlogo.png" alt="Its Sew Regina Home" >
+        <img class="logo" src="/static/images/itssewlogoedited.webp" alt="Its Sew Regina Home" >
       </a>
       <!--Business Name-->
       <h1 >Its Sew Regina</h1>
