--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -5,7 +5,7 @@
   <title>Its Sew Regina - Gallery</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/static/css/gallery.css?v=2026-02-05" rel="stylesheet">
+  <link href="/static/css/gallery.css?v=2026-02-12" rel="stylesheet">
 
   <style>
 
@@ -16,7 +16,7 @@
   <header>
     <div class="bvn-logobar">
       <a href="/" class="logo">
-        <img src="/static/images/itssewlogo.png" alt="Its Sew Regina Home" >
+        <img class="logo" src="/static/images/itssewlogoedited.webp" alt="Its Sew Regina Home" >
       </a>
       <!--Business Name-->
       <h1 >Its Sew Regina</h1>
@@ -121,8 +121,8 @@ aria-controls="main-menu"></button>
       </form>
 
   </footer>
- <script src="/static/js/cart.js" media="print"></script>
-   <script src="/static/js/gallery.js?v=2026-02-05"></script>
+ <script src="/static/js/cart.js?v=2026-02-12" media="print"></script>
+   <script src="/static/js/gallery.js?v=2026-02-12"></script>
 <script src="/static/js/modal.js"></script>
   <script src="/static/js/main.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
