--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -1,6 +1,9 @@
 .carousel {
+  box-sizing: border-box;
     position: relative;
     width: 100%;
+    height: 100%;
+  padding-inline: 16.766%;
     margin: 1px; 
   overflow-x: auto;
   scroll-snap-type: x mandatory;
@@ -15,46 +18,111 @@
 .carousel::-webkit-scrollbar {
   display: none;
 }
+article{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 3px solid var(--border-soft);
+  border-bottom: 3px solid var(--border-soft);
+  width: 100vw;
+  position: relative;
+ 
+}
 
 .carousel-track {
   display: flex;
   transition: transform 0.5s ease;
+ 
+}
+.carousel-track::before,
+.carousel-track::after {
+  content: "";
+  flex: 0 0 16.766%;
 }
 
 .slide {
-  flex: 0 0 100%;
-  scroll-snap-align: start;
-  box-sizing: border-box;
+ flex: 0 0 66.776%;
+    transform: scale(0.9) rotateY(-4deg);
+  transition: transform 0.5s ease;
+  scroll-snap-align: center;
+  margin-right: var(--space-2);
+  opacity: 0.5;
+  padding-top: var(--space-3);
+  padding-bottom: var(--space-3);
 }
-.slide img {
+
+
+.slide-media {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
+  overflow: visible;
+}
+
+.slide.is-active{
+  opacity: 1;
+  transform: scale(1.02 ) rotateY(0deg);
+  z-index: 2;
+}
+.slide.is-left {
+  transform: translateX(-8%) scale(0.85);
+  opacity: 0.4;
+}
+
+.slide.is-right {
+  transform: translateX(8%) scale(0.85);
+  opacity: 0.4;
+}
+
+
+.slide h3 {
+  position: relative;
+  bottom: var(--space-3);
+  left: var(--space-3);
+  color: var(--bg-surface);
+  font-size: 1.5rem;
+  text-shadow: 0 0 5px rgba(0,0,0,0.5);
 }
 
 .carousel[data-variant="hero"] img {
-  width: 200px;
-  height: auto;
+  overflow: hidden;
+  aspect-ratio: 4/2;
+  object-fit: cover;
+  transform: translateY(-10px);
+  width: 100%;
   display: block;
 }
-.carousel[data-variant="demo"] img {
-  min-height: auto;
+.carousel[data-variant="demo"] button {
+   overflow: hidden;
+  aspect-ratio: 4/2;
+  object-fit: cover;
+  transform: translateY(-10px);
+  width: 100%;
+  display: block;
 }
 
-.carousel-btn {
+.carousel-dots  {
   position: absolute;
-  top: 85%;
-  transform: translateY(-60%);
+  bottom: 10px;
+  right: 70px;
+  transform: translateY(-50%);
   background-color: rgba(0,0,0,0.5);
   border: none;
-  color: var(--brand-pink) ;
+  color: var(--brand-green) ;
   font-size: 2rem;
   padding: 0 5px;
   cursor:  pointer;
   border-radius: 5px;
 }
-.carousel-btn:active {
-  background-color:var(--brand-pink);
+
+.carousel-dots button {
+  opacity: 0.5;
+  transform: scale(0.8);
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.carousel-dots button.active {
+  opacity: 1;
+  transform: scale(1.1);
+  background-color: var(--brand-blonde);
+  color: var(--brand-green);
 }
 
