--- a/static/css/cartstyles.css
+++ b/static/css/cartstyles.css
@@ -11,7 +11,7 @@
 #users-card{
   background-color: var(--brand-green);
   border: var(--bg-surface) 2px solid;
-  padding: 1px,2px;
+  padding: 1px;
   margin: 3px;
   max-width: fit-content;
   border-radius: 10px;
@@ -51,10 +51,10 @@
  position: relative;
  padding: 10px;
  text-align: center;
- width: 75vw;
+ width: 65vw;
  max-width: 520px;
  min-width: 240px;
- max-height:800vh;
+ max-height:80vh;
  cursor: default;
 }
 
@@ -72,6 +72,7 @@
    padding-right: 5px;
    width: 100%;
    max-width: 100%;
+   background-color: #f7f7f7;
  }
 
  .cart-view-modal{
@@ -88,15 +89,36 @@
    max-width: 100%;
 
  }
+ .cart-price-container{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+ }
+.modal-thumbnails {
+  float: left;
+  gap: 10px;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+}
+.modal-variants {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+ flex-wrap: nowrap;
+}
 
+.modal-thumb {
+  width: 15%;
+  cursor: pointer;
+}
 .product-modal-content{
   display: grid;
   grid-template-columns: auto ;
-  gap: 10px;
   justify-content: center;
   align-items: center;
-  max-width: 90%;
-  height:60%;
+  max-width: 1000%;
+  height:100%;
   align-content: center;
 }
 #modal-product-image{
@@ -104,7 +126,8 @@
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  object-fit: contain;
+  object-fit: cover;
+  aspect-ratio: 4 / 5;
 }
 
 .modal-image-wrapper {
@@ -116,6 +139,12 @@
 }
 .modal p{
  max-width: 100%;
+ line-height: 1.3;
+}
+.modal-price{
+  font-weight: bold;
+  color: var(--brand-green);
+ 
 }
  #cart-title{
 color: #00231C;
@@ -130,6 +159,14 @@ padding: 1px;
    font-weight: bold;
    margin: 1px;
    color: #00231C;
+ }
+ #open-cart{
+  background-color: var(--brand-blonde);
+  border-radius: 10px;
+  box-shadow: 2px #96BAA0;
+  font-weight: bold;
+  margin: 2px 1px;
+  padding: 1px 3px 1px 3px;
  }
  
  .clear-cart{
