--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -16,8 +16,8 @@
 
   #gallery-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-    gap: 4px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    padding: var(--space-1);
   }
 
   
@@ -29,6 +29,7 @@
 #gallery-container{
   background-color: var(--bg-secondary);
   border-radius: 5px;
+  margin: var(--space-1);
 }
 body{
   background-color: #BDD4DA;
@@ -41,12 +42,7 @@ body{
   
 }
 
-main{
-  gap: 2px;
-  max-width: 99vw;
-  padding: 1rem;
-  
-}
+
 
 
 
@@ -67,7 +63,7 @@ figure.product-media{
 
 figure.product-media img {
   width: 100%;
-  height: 100;
+  height: 100%;
   object-fit: cover;
   display: block;
  
@@ -84,12 +80,11 @@ figure.product-media figcaption {
 
 
 .gallery{ 
-  border-radius: 10px;
+
   background-color:  #F7F7F7; 
   box-shadow: 0 5px 5px #000; 
   display: flex;
   flex-direction: column;
-  height: 100%;
   margin: 5px; 
   overflow: hidden;
   padding: 2px; 
