--- a/templates/foru.html
+++ b/templates/foru.html
@@ -5,7 +5,7 @@
   <title>Its Sew Regina - For You</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="static/css/foru.css?v=2026-02-05" rel="stylesheet">
+  <link href="static/css/foru.css?v=2026-02-12" rel="stylesheet">
 
 
   <style>
@@ -71,15 +71,42 @@
 
 
 <div  class="hero-section">
-<div class="carousel" 
-data-carousel
-data-variant="hero"
-id="demo-carousel-hero">
+
+  
+  
+  <div class="carousel"
+  data-variant="demo"
+  >
+  <button class="carousel-btn prev" >&#10094;</button>
   <div class="carousel-track">
-   
-  </div>
-</div>
-<div class="carousel-dots" data-dots></div>
+
+          <div class="slide">
+        
+         
+              <button>Purses</button>
+           
+          </div>
+
+
+          <div class="slide">
+           
+           
+              <button>Phone Stands</button>
+           
+          </div>
+
+
+          <div class="slide">
+            
+          
+              <button>Pillows</button>
+            
+          </div>
+
+        </div>
+        <button class="carousel-btn next">&#10095;</button>
+      </div>
+    <div class="carousel-dots" data-dots></div>
 
 </div>
 
