--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -5,7 +5,7 @@
   <title>Its Sew Regina - Gallery</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/static/css/gallery.css?v=2026-02-12" rel="stylesheet">
+  <link href="/static/css/gallery.css?v=2026-02-17" rel="stylesheet">
 
   <style>
 
@@ -73,6 +73,49 @@
 
 
     <h2 id="top">In stores now</h2>
+    <article>
+     <h3>Carrying Bags</h3>
+      <script src="/static/js/carousel.js?v=2026-02-12"></script>
+
+      <div class="carousel" 
+      data-carousel 
+      data-category="carrying-bags"
+      data-variant="hero"
+      >
+        <div class="carousel-track"></div>
+      </div>
+      <div class="carousel-dots" data-dots></div>
+
+      <h3>Phone Props</h3>
+      <div class="carousel" 
+      data-carousel 
+      data-category="phone-props"
+      data-variant="hero"
+  >
+        <div class="carousel-track"></div>
+      </div>
+      <div class="carousel-dots" data-dots></div>
+      <h3>pillows</h3>
+      <div class="carousel" 
+      data-carousel 
+      data-category="pillows"
+      data-variant="hero"
+      id="home-carousel-demo">
+        <div class="carousel-track"></div>
+      </div>
+      <div class="carousel-dots" data-dots></div>
+     <h3> purses</h3>
+      <div class="carousel" 
+      data-carousel 
+      data-category="purses"
+      data-variant="hero"
+   >
+        <div class="carousel-track"></div>
+      </div>
+      <div class="carousel-dots" data-dots></div>
+   
+    </article>
+   
     <div id="gallery-container">
 
       <!--product cards-->
@@ -121,8 +164,7 @@ aria-controls="main-menu"></button>
       </form>
 
   </footer>
- <script src="/static/js/cart.js?v=2026-02-12" media="print"></script>
-   <script src="/static/js/gallery.js?v=2026-02-12"></script>
+ <script src="/static/js/cart.js?v=2026-02-17" media="print"></script>
 <script src="/static/js/modal.js"></script>
   <script src="/static/js/main.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
