--- a/static/css/index.css
+++ b/static/css/index.css
@@ -7,8 +7,7 @@
 
 /* Shared grid groups */
 .special-items-container,
-.bundle,
-.aside-article-container {
+.bundle {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(7.0rem, 1fr)); /* 120px */
  
@@ -37,9 +36,10 @@
 .special-product img {
   border-radius: 2px;
       overflow: hidden;
-    aspect-ratio: 5 /5;
+    aspect-ratio: 4/5;
     object-fit: cover;
     width: 100%;
+    padding: var(--space-1);
     
 
 }
@@ -55,9 +55,11 @@
   border-radius: 10px;
     border-radius: 2px;
       overflow: hidden;
-    aspect-ratio: 5 /5;
+    aspect-ratio: 4 /5;
     object-fit: cover;
     width: 100%;
+    padding: var(--space-1);
+   
 
 }
 
@@ -79,17 +81,20 @@
   padding: var(--space-3);
   margin-top: var(--space-3);
 }
+figure{
+  display: block;
+  width: 100%;
+  margin: 0;
+}
 
 
 /* ---------- Aside / Categories ---------- */
-.aside-article-container {
-  background-color: #014038;
-  border-radius: 10px;
-  padding: var(--space-3);
-}
+
 
 aside {
   margin-top: var(--space-3);
+  display: block;
+  float: left;
 }
 
 .gallery-product-category {
@@ -108,6 +113,8 @@ aside {
     aspect-ratio: 5 /5;
     object-fit: cover;
     width: 100%;
+    height: 100%;
+    padding: var(--space-1);
 }
 .default-category {
   display: flex;
@@ -116,6 +123,11 @@ aside {
   flex-direction: row;
   
 }
+.category{
+  display: flex;
+  flex-direction: row;
+ 
+}
 
 .default-category button:hover{
   color: var(--brand-green);
@@ -123,27 +135,79 @@ aside {
 }
 
 
-/* Category images default hidden */
-.tree-category,
-.plant-category,
-.equipment-category {
-  display: none;
+
+
+
+.fabric-picker {
+  position: relative;
+ 
+  height: 15vh;
+  overflow: hidden;
+  padding: var(--space-2);
+  margin: var(--space-2);
+  border: solid 4px var(--bg-surface);
+  border-radius: 10px;
+
 }
+
+.fabric {
+  position: absolute;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-position: center;
+  transition: all .8s ease;
+  cursor: pointer;
+}
+.overlay{
+  position: absoulute;
+  inset: 0;
+  background: linear-gradient(to top, rgba(0,0,0,0.5), transparent);
+  pointer-events: none;
+}
+.fabric.active {
+  right: 0 ;
+  height: 100%;
+  z-index: 100;
+  box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+    transform: scale(3);
+}
+
+.fabric:hover {
+  transform: scale(1.02);
+}
+
+
+
+
+
+
+
+
+
 
 
 /* ---------- Desktop Enhancements ---------- */
 @media (min-width: 769px) {
-  .home-layout {
-    display: grid;
-    grid-template-columns: 2fr 2fr 1fr;
-    gap: var(--space-6);
-  }
 
+.home-layout{
+  display: grid;
+  grid-template-columns: 40vw 100%;
+  max-width: 100%;
+}
   .starterpackage {
-    grid-column: 2;
+  max-width: 50vw
   }
 
   aside {
-    grid-column: 3;
+    grid-column: 2;
   }
+  .special-card{
+    max-width: 50vw;
+  }
+  .carousel{
+    max-width: 60vw;
+  }
+  
 }
