--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -143,7 +143,7 @@ aria-controls="main-menu"></button>
     <div class="container" id="footer-container">
       <div class="footer-row" id="hourstable">
         <h3>Hours of Operation</h3>
-        <table id="hours">
+        <table id="hours-table">
           <tr>
             <th colspan="3">Hours of Operation</th>
           </tr>
