--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -13,8 +13,11 @@
 </head>
 
 <body>
-  <header>
-    <div class="bvn-logobar">
+
+  <div class="page">
+
+    <header>
+      <div class="bvn-logobar">
       <a href="/" class="logo">
         <img class="logo" src="/static/images/itssewlogoedited.webp" alt="Its Sew Regina Home" >
       </a>
@@ -44,7 +47,7 @@
     
   </header>
 
-  <main>
+  
 
 
     <!-- Cart Modal -->
@@ -70,10 +73,11 @@
     </div>
 
 
+<div class="product-gallery container">
 
-
-    <h2 id="top">In stores now</h2>
-    <article>
+  
+  <h2 id="top">In stores now</h2>
+  <article >
      <h3>Carrying Bags</h3>
       <script src="/static/js/carousel.js?v=2026-02-12"></script>
 
@@ -116,27 +120,18 @@
    
     </article>
    
-    <div id="gallery-container">
 
-      <!--product cards-->
-     
-  
-
+    
+  </div>
+    
+    
+  </div>
+    
+    <div class="hero-group-container">
 
     </div>
 
-    
-
-<div class="hero-group-container">
-<a class="hero-group-option"href="/">Home</a>
-<a class="hero-group-option"href="/gallery">Gallery</a>
-<a class="hero-group-option"href="/aboutus">About Us</a>
-<button class="hero-group-option" id="hamburger-icon" aria-label="Navigation menu" 
-aria-controls="main-menu"></button>
-</div>
-
-
-  </main>
+  
 
 
   <footer>
