--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -26,10 +26,8 @@
 
 
 /* Base styles (shared) */
-#gallery-container{
-  background-color: var(--bg-secondary);
-  border-radius: 5px;
-  margin: var(--space-1);
+.product-gallery{
+  padding: var(--space-3);
 }
 body{
   background-color: #BDD4DA;
@@ -38,7 +36,7 @@ body{
   margin: 0;
   max-width: 100vw;
   overflow-x: hidden;
-  padding: 2px;
+
   
 }
 
