--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,7 +6,7 @@
 }
 
 /* Shared grid groups */
-.special-items-container,
+
 .bundle {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(7.0rem, 1fr)); /* 120px */
@@ -17,31 +17,44 @@
 
 
 /* ---------- Promotional Card ---------- */
-.special-card {
-  grid-column: 1;
-  max-width: 100%;
-  padding: var(--space-5);
-}
 
 #special-header {
-  margin-bottom: var(--space-2);
+  margin-bottom: var(--space-1);
 }
 
 .special-items-container {
+  grid-column: 1;
+  max-width: 100%;
   background-color: #BDD4DA;
-  padding: var(--space-1);
-  border-radius: 5%;
+
+
 }
 
 .special-product img {
   border-radius: 2px;
       overflow: hidden;
-    aspect-ratio: 4/5;
+    aspect-ratio: 6/4;
     object-fit: cover;
     width: 100%;
     padding: var(--space-1);
     
 
+}
+.special-product-caption{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 10px;
+}
+.special-product-caption h3, p{
+
+  margin: 0;
+  padding: 0;
+}
+#special-price{
+ 
+  position: absolute;
+  right: 20px;
 }
 
 
@@ -143,9 +156,6 @@ aside {
  
   height: 15vh;
   overflow: hidden;
-  padding: var(--space-2);
-  margin: var(--space-2);
-  border: solid 4px var(--bg-surface);
   border-radius: 10px;
 
 }
@@ -155,9 +165,9 @@ aside {
   overflow: hidden;
   width: 100%;
   height: 100%;
-  background-size: contain;
-  background-position: center;
-  transition: all .8s ease;
+  background-size: auto;
+  background-position: left;
+  transition: all .8s cubic-bezier(0.4, 0, 1, 1);
   cursor: pointer;
 }
 .overlay{
