--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,7 +17,7 @@
 /* ---------- Design Tokens ---------- */
 :root {
   /* Colors */
-  --bg-main: #f3e5e3;
+  --bg-main: #dac9c6d4;
   --bg-surface: #16191c;
   --bg-secondary: #312726;
   --bg-muted: #1e2226;
@@ -28,6 +28,7 @@
   --brand-pink: #e06aa3;
   --brand-green: #6fbf8f;
   --brand-blonde: #f3e5e3;
+
 
   --border-soft: rgba(255,255,255,0.08);
   --shadow-soft: 0 8px 20px rgba(0,0,0,0.4);
@@ -55,7 +56,7 @@ body {
   line-height: 1.2;
   background-color: var(--bg-main);
   overflow-x: hidden;
-  padding: var(--space-1); /* mobile default */
+ 
 }
 
 
@@ -64,6 +65,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+
 }
 
 
@@ -80,9 +82,13 @@ main {
   flex: 1;
   display: flex;
   flex-direction: column;
+
  
 }
 
+.home-layout{
+  padding: var(--space-3);
+}
 
 /* ---------- Typography ---------- */
 
@@ -162,7 +168,7 @@ button {
 }
 
 button:hover {
-  color: var(--brand-blonde);
+  color: var(--bg-surface);
     
     background-color:var(--brand-pink);
     border-color: var(--bg-secondary);
@@ -175,7 +181,7 @@ header {
   flex-direction: column;
   background-color: var(--bg-secondary);
   width: 100vw;
-  height: 142px;
+  height: 80px;
 
   border-bottom: 2px solid var(--brand-blonde);
 }
@@ -192,6 +198,7 @@ header {
   height: 100%;
   overflow: hidden;
   object-fit: cover;
+  padding: var(--space-1);
 }
 
 
@@ -223,7 +230,12 @@ nav ol {
 }
 .show-navigation-btn{
   background-color: transparent;
-  font-size: xx-large;
+  font-size: large;
+  color: var(--brand-pink);
+}
+.show-navigation-btn:active{
+  background-color: var(--brand-pink);
+  color: var(--brand-blonde);
 }
 
 .navigation-menu {
@@ -264,31 +276,34 @@ nav ol {
 .price {
   display: inline-block;
   border-radius: 999px;
-  padding: var(--space-2) var(--space-4);
+  padding: var(--space-1) var(--space-2);
+  
   border: 1px solid var(--brand-green);
-  color: var(--brand-green);
+  color: var(--bg-surface);
   font-weight: bold;
 }
 
 
 /* ---------- Hero Group (Global) ---------- */
 .hero-group-container {
+  display: grid;
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 80px;
   background-color: var(--bg-secondary);
-  display: flex;
-  align-items: center;
-  gap: var(--space-3);
   z-index: 1000;
-  justify-content: space-around;
+  justify-items: stretch;
   align-items: center;
+
+
+
 }
 
 .hero-group-navigation{
-
-  justify-content: space-evenly;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 .hero-group-navigation a {
   border: none;
