--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -13,8 +13,11 @@
 </head>
 
 <body>
-  <header>
-    
+
+  <div class="page">
+
+    <header>
+      
     <div class="bvn-logobar">
       <a href="/" class="logo">
         <img class="logo" src="/static/images/itssewlogoedited.webp" alt="Its Sew Regina Home" >
@@ -124,18 +127,15 @@ Open Cart
 
         <input type="submit" name="submit" value="Submit"  />
         <input id="clear-form"type="reset" value="Clear Form" />
-
+        
       </div>
-
+      
     </form>
+    
+  </div>
+    <div class="hero-group-container">
 
-<div class="hero-group-container">
-<a class="hero-group-option"href="/">Home</a>
-<a class="hero-group-option"href="/gallery">Gallery</a>
-<a class="hero-group-option"href="/aboutus">About Us</a>
-<button class="hero-group-option" id="hamburger-icon" aria-label="Navigation menu" 
-aria-controls="main-menu"></button>
-</div>
+    </div>
 
   </main>
 
