--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,15 @@
   
 </style>
 </head>
+
 <body>
   
+  
+  
 
-
-  <div class="page">  
-  <header>
+    
+    <div class="page">  
+      <header>
     
     <div class="bvn-logobar">
       <a href="/" >
@@ -52,14 +55,15 @@
     
     
   </header>
-  <main class="container home-layout">
   
- 
+    
+  
+ <div class="home-layout"
     <!-- Cart Modal -->
     <div id="users-card">
     <button id="open-cart"  aria-haspopup="dialog" aria-controls="cart-modal">Open cart
     </button>
-    <!-- Cart Modal -->
+  
     <div id="modal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="modal-title">
       <div class="modal-content" role="group">
         <button id="close-modal" class="close" aria-label="Close Modal">&times;</button>
@@ -74,25 +78,23 @@
   </div>
 
 
-  <div class="special-card card" id="promo-bundle">
-    <h3 id="special-header">On the Racks</h3>
-    <h4> In stores now!!</h4>
+
+    <h3 id="special-header">One of each</h3>
+
     <div class="special-items-container">
       <figure class="special-product">
-        <figcaption>Phone Props</figcaption>
-        <img src="/static/images/products/sportspsdemo1.webp" alt="sports phone stands"  >
+   <img src="/static/images/products/sportsgroupdemo.webp" alt="">
       </figure>
-      <figure class="special-product">
-        <figcaption>Pillows</figcaption>
-        <img src="/static/images/products/smlpillowdemo1.1.webp" alt="small pillow" >
-      </figure>
-    </div>
+      <figcaption class="special-product-caption">
+        <h3>Sports Collection</h3>
+        <p>One of a kind custom sports design</p>
+        <a href="/gallery" id="linkgallery">see More</a>
+        <span class="price" id="special-price">$21.02</span>
+      </figcaption>
+   
 
     
     
-    <a href="/gallery.html" id="linkgallery">see More</a>
-
-    <span class="price" id="special-price">$21.02</span>
   </div>
   
   <article>
@@ -204,25 +206,22 @@
 
       <span class="price" id="starter-price" alt="Starter package price">$29.99</span>
     </div>
-
+    
     <p id="discount"><strong>Members Discount !!</strong><br>Existing members get a 30% discount on forth in-store visit
     </p>
   </section>
-
-
-
-<div class="hero-group-container">
-  <div class="hero-group-navigation">
-<a href="/">Home</a>
-<a href="/gallery">Gallery</a>
-<a href="/aboutus">About Us</a>
-  </div>
-<button type="button"  class="hero-group-option" id="hamburger-icon" aria-label="Navigation menu" 
-aria-controls="main-menu"></button>
+  
+  
 </div>
 
+<div class="hero-group-container">
   
-</main>
+</div>
+
+
+  
+
+
 <footer>
   <table id="hours-table">
     <tr>
@@ -274,7 +273,8 @@ aria-controls="main-menu"></button>
 <script src="/static/js/main.js?v=2026-02-17"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
-
 </body>
+
+
 
 </html>
