--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -87,13 +87,13 @@
       data-variant="hero"
       >
         <div class="carousel-track"></div>
+        <div class="carousel-dots" data-dots></div>
       </div>
-      <div class="carousel-dots" data-dots></div>
 
-      <h3>Phone Props</h3>
+      <h3>Phone Stands</h3>
       <div class="carousel" 
       data-carousel 
-      data-category="phone-props"
+      data-category="phone-stands"
       data-variant="hero"
   >
         <div class="carousel-track"></div>
@@ -105,6 +105,15 @@
       data-category="pillows"
       data-variant="hero"
       id="home-carousel-demo">
+        <div class="carousel-track"></div>
+      </div>
+      <div class="carousel-dots" data-dots></div>
+          <h3> Wristlets</h3>
+      <div class="carousel" 
+      data-carousel 
+      data-category="wristlets"
+      data-variant="hero"
+   >
         <div class="carousel-track"></div>
       </div>
       <div class="carousel-dots" data-dots></div>
