--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
   
     
   
- <div class="home-layout"
+ <div class="home-layout">
     <!-- Cart Modal -->
     <div id="users-card">
     <button id="open-cart"  aria-haspopup="dialog" aria-controls="cart-modal">Open cart
@@ -83,7 +83,7 @@
 
     <div class="special-items-container">
       <figure class="special-product">
-   <img src="/static/images/products/sportsgroupdemo.webp" alt="">
+   <img src="/static/images/categories/sportsgroupdemo.webp" alt="">
       </figure>
       <figcaption class="special-product-caption">
         <h3>Sports Collection</h3>
@@ -99,21 +99,27 @@
   
   <article>
     <script src="/static/js/carousel.js?v=2026-02-17"></script>
-    <div class="carousel" 
-    data-carousel 
-    data-category="phone-props"
-    data-variant="hero"
-    id="home-carousel-demo">
-      <div class="carousel-track"></div>
-    </div>
+    <h3>Phone Stands</h3>
+      <div class="carousel" 
+      data-carousel 
+      data-category="phone-stands"
+      data-variant="hero"
+  >
+        <div class="carousel-track">
+        </div>
+
+        
+      </div>
+      <button class="carousel-btn prev" >&#10094;</button>
+      <button class="carousel-btn next">&#10095;</button>
     <div class="carousel-dots" data-dots></div>
   </article>
   
 
 
   <aside>
+    <h3 class="topic">New Patterns</h3>
     <div class="gallery-product-category">
-      <h3 class="topic">New Patterns</h3>
       <p>Select a fabric to expand</p>
       <div class="fabric-picker">
         <div class="fabric" style="background-image:url('/static/images/fabricpicker/fab1.webp');""">
@@ -165,13 +171,13 @@
             <a
               href="/gallery"><img class="plant-category" src="/static/images/products/cowboyslgplw2.1.webp" alt="click here for the spider plant description"></a>
             <a
-              href="/gallery"><img class="plant-category" src="/static/images/products/sportspsdemo2.webp" alt="click here for aloe plants description"></a>
+              href="/gallery"><img class="plant-category" src="/static/images/categories/sportspsdemo2.webp" alt="click here for aloe plants description"></a>
           </div>
           <div class="category">
             <a
               href="/gallery"><img class="equipment-category" src="/static/images/products/afroculturelgb1.1.webp" alt="click here for wwatering can description"></a>
             <a
-              href="/gallery"><img class="equipment-category" src="/static/images/products/smlpillowdemo1.1.webp" alt="click here for birdhouse's description"></a>
+              href="/gallery"><img class="equipment-category" src="/static/images/categories/smlpillowdemo1.1.webp" alt="click here for birdhouse's description"></a>
             <a
               href="/gallery"><img class="equipment-category" src="/static/images/products/cowboysps1.1.webp" alt="click here for potting soil description"></a>
           </div>
@@ -182,29 +188,29 @@
 
   <section>
 
+    <h3>Custom Made Items </h3>
 
     <div class="starterpackage card">
-      <h3>Custom Made Items </h3>
-    <div id="duo">
+ 
       <div class="bundle">
 
         <figure class="bundle-deal">
-          <figcaption>Afro Culture</figcaption>
           <img src="/static/images/products/tanafrolgb2.1.webp"
-                alt="Custom made tan afro culture womens carry bag" >
+          alt="Custom made tan afro culture womens carry bag" >
+          <figcaption>Afro Culture</figcaption>
         </figure>
         
         <figure class="bundle-deal">
-          <figcaption>Afro Culture</figcaption>
           <img src="/static/images/products/afroculturelgb1.1.webp"
-                alt="Custom made afro culture carry bag " >
+          alt="Custom made afro culture carry bag " >
+          <figcaption>Afro Culture</figcaption>
 
         </figure>
       </div>
     
-      </div>
+ 
 
-      <span class="price" id="starter-price" alt="Starter package price">$29.99</span>
+
     </div>
     
     <p id="discount"><strong>Members Discount !!</strong><br>Existing members get a 30% discount on forth in-store visit
