--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -24,8 +24,10 @@ article{
   align-items: center;
   border-top: 3px solid var(--border-soft);
   border-bottom: 3px solid var(--border-soft);
-  width: 100vw;
+  max-width: 900px;
+  margin: 0 auto;
   position: relative;
+
  
 }
 
@@ -34,11 +36,7 @@ article{
   transition: transform 0.5s ease;
  
 }
-.carousel-track::before,
-.carousel-track::after {
-  content: "";
-  flex: 0 0 16.766%;
-}
+
 
 .slide {
  flex: 0 0 66.776%;
@@ -144,5 +142,44 @@ article{
   transform: scale(1.1);
   background-color: var(--brand-blonde);
   color: var(--brand-green);
+}
+
+
+
+@media (min-width: 769px) {
+  .carousel {
+    box-sizing: border-box;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding-inline: 16.766%;
+    margin: 1px; 
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    overscroll-behavior-x: contain;
+  }
+.carousel-btn {
+  position: absolute;
+  bottom: 10px;
+  background-color: rgba(0,0,0,0.5);
+  border: none;
+  color: #00231C;
+  font-size: 2rem;
+  padding: 6px 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  z-index: 10;
+}
+
+.carousel-btn.next {
+  right: 10px;
+}
+
+.carousel-btn.prev {
+  left: 10px;
+}
+
 }
 
