--- a/static/css/cartstyles.css
+++ b/static/css/cartstyles.css
@@ -46,7 +46,7 @@
  animation: ease-in-out;
  border-radius: 8px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
- background: var(--brand-blonde);
+ background: var(--trns-blonde);
  outline: none;
  position: relative;
  padding: 10px;
