--- a/static/css/index.css
+++ b/static/css/index.css
@@ -25,7 +25,7 @@
 .special-items-container {
   grid-column: 1;
   max-width: 100%;
-  background-color: #BDD4DA;
+  background-color: var(--brand-blonde);
 
 
 }
@@ -61,7 +61,8 @@
 /* ---------- Starter Package ---------- */
 .starterpackage {
   max-width: 100%;
-  padding: var(--space-5);
+  padding: var(--space-1);
+  background-color: var(--brand-blonde);
 }
 
 .starterpackage img {
@@ -77,12 +78,7 @@
 }
 
 
-/* ---------- Bundle ---------- */
-.bundle {
-  background-color: #BDD4DA;
-  border-radius: 10px;
-  padding: var(--space-2);
-}
+
 
 
 /* ---------- Discount ---------- */
@@ -203,7 +199,7 @@ aside {
 
 .home-layout{
   display: grid;
-  grid-template-columns: 40vw 100%;
+  grid-template-columns: 40vw 1fr;
   max-width: 100%;
 }
   .starterpackage {
@@ -211,13 +207,10 @@ aside {
   }
 
   aside {
-    grid-column: 2;
+    grid-column: 1;
   }
   .special-card{
     max-width: 50vw;
   }
-  .carousel{
-    max-width: 60vw;
-  }
-  
+
 }
